compiler/test-data/parser/types/errors/unclosed_generic.frel
module test

scheme BrokenTypes {
    badList : List<String
}
